[project]
name = "harry-potter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "django-redis>=6.0.0",
    "dotenv>=0.9.9",
    "python-decouple>=3.8",
    "redis>=6.4.0",
]
